@@ -1,3 +1,5 @@
+* Make Element._attributeTranslations.read.values._getEv only return a value for code wrapped in an anonymous function. [#184 state:resolved] [Garrett Smith, jddalton]
+
 * Stop window "onload" observers from firing before the "dom:loaded" observers.
   Enforce first-in-first-out observer execution order if the browser doesn't. Closes #9394. [jddalton, Samuel Lebeau]
 
